multipletemprenderdemo LWC modified

--- a/force-app/main/default/lwc/multipletemprenderdemo/multipletemprenderdemo.html
+++ b/force-app/main/default/lwc/multipletemprenderdemo/multipletemprenderdemo.html
@@ -1,3 +1,9 @@
 <template>
-    
+    <lightning-card title="Multiple template render demo!">
+        <div>
+            <h2>Choose your option</h2>
+            <lightning-button label="Sign Up" onclick={handleClick}></lightning-button>
+            <lightning-button label="Sign In" onclick={handleClick}></lightning-button>
+        </div>
+    </lightning-card>
 </template>
