Foreachdemo Apex Class and foreachdemo LWC Component added

--- a/force-app/main/default/lwc/bparent/bparent.html
+++ b/force-app/main/default/lwc/bparent/bparent.html
@@ -1,5 +1,5 @@
 <template>
     <h2>Parent Component</h2>
-    <c-bchild ongetsearchvalue = {searchValue}></c-bchild>
+    <c-Bchild ongetsearchvalue = {searchValue}></c-Bchild>
     <p>{searchvalue}</p>
 </template>
