--- a/force-app/main/default/lwc/passparameterdemo/passparameterdemo.html
+++ b/force-app/main/default/lwc/passparameterdemo/passparameterdemo.html
@@ -1,11 +1,10 @@
 <template>
-    <lightning-card title = "Account Details">
-        <lightning-input type = "Search" label = "Enter Search Value" value ={searchKey} onchange ={handleonChange}></lightning-input>
-        <lightning-datatable
-        key-field ="Id"
-        data ={accounts}
-        columns ={columns}
-        >
+    <lightning-card>
+        <lightning-input type="search" label="Enter Search Value" value= {searchKey} onchange= {handleonChange}></lightning-input>
+         <lightning-datatable
+            key-field="id"
+            data = {accounts}
+            columns= {columns}>
         </lightning-datatable>
     </lightning-card>
 </template>
